    deprecated; it will be removed from later versions. 
  * Expand tilde in argument of long option --pwfile. (Thanks Christian
    Brabandt) Closes: Debian bug #434813
  * archivemail now accepts --days=0 
  * Fixed crash if --warn-duplicate is used with IMAP (Thanks Christian
    Brabandt) Closes: Debian bug #434786 (the Debian package already has a fix)

Version 0.7.0   - 2 November 2006
  * Fixed long options --filter-append and --pwfile to accept their arguments.
    Closes: #1555935
  * Fixed From_ line generation to actually look for the 'Return-path' and
    'From' headers.  Closes: #1555797
  * Fixed IMAP authentication/URL parsing, which wasn't working at all in
    v0.6.2.  Require username encoded in URL, but be flexible with the password:
    handle both --pwfile and URL-encoded password, and fallback to querying the
    user if neither is present.  Closes: #1555951
  * Convert on-the-wire CRLF to native EOL when saving messages from an IMAP
    folder.  Closes: #1555803
  * Updated man page.  This also addresses #1555951
  * Fixed unittest failure by updating --suffix testcase.  Based on analysis by
    Peter Poeml.  Thanks, Peter. 
  * Fixed invalid IMAP filter string for large messages (--size option).
    (Thanks to the anonymous bug reporter)  Closes: #863813
  * Fixed IMAP --dry-run so it doesn't download all messages that would be
    archived.  
  * Fixed IMAP --delete which didn't work at all.  (Thanks Anand)  
    Closes: Debian bug #203282
  * Terminate each message in newly written mbox with an empty line if the
    message source is not an mbox-format folder.  (Thanks  Chung-chieh Shan)
    Closes: Debian bug #250410
  * Mangle From_ in message body if the message source is not an mbox-format
    folder.  (Thanks Chung-chieh Shan)  Closes: Debian bug #250402
  * Added new option --dont-mangle to turn off From_ mangling.
  * Bumped Python dependency to version 2.3.