@@ -24,6 +24,9 @@ Version 0.7.1   - UNRELEASED
   * archivemail now accepts --days=0 
   * Fixed crash if --warn-duplicate is used with IMAP (Thanks Christian
     Brabandt) Closes: Debian bug #434786 (the Debian package already has a fix)
+  * When converting from other formats to mbox, archivemail used to preserve
+    existing 'Status' and 'X-Status' mbox headers; these are now silently
+    overwritten to ensure they have correct values.
 
 Version 0.7.0   - 2 November 2006
   * Fixed long options --filter-append and --pwfile to accept their arguments.
